Fixed spacing for tooltip information

--- a/aguila_theme/css/mapas.css
+++ b/aguila_theme/css/mapas.css
@@ -41,11 +41,17 @@ ul#social li:last-of-type{
 div.information{
     background:#efcb00;
     color:rgba(11, 93, 153, 1);
-    padding: 5px;
+    padding: 0px 5px 0 5px;
 }
 div.information>div {
   text-align: left;
   padding-left: 6px;
+}
+div.information>div:first-of-type {
+  padding-bottom: 5px;
+}
+div.information>div:last-of-type {
+  padding-bottom: 5px;
 }
 .gm-style .gm-style-iw{
     overflow: hidden;
